tests/NormalTests/paczka1/fuzzy1/68540459.err
Error in line 13: S444 S101 98,2
Error in line 18: S444 A715 86,9
Error in line 23: 3KZr7A S101 74,0
Error in line 24: 3KZr7A S444 10,4
Error in line 33: ylRSW S444 63,91
Error in line 34: 7wjdvzrkCo S444 -2,1
Error in line 26: 7wjdvzrkCo S444 93,0
Error in line 39: ylRSW S444 51,7
